--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -26,6 +28,7 @@
     "css-loader": "^0.23.1",
     "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.3.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
